--- a/.github/workflows/build-jboss7-image.yaml
+++ b/.github/workflows/build-jboss7-image.yaml
@@ -23,6 +23,6 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: /jboss7/ 
+          context: jboss7/ 
           push: true
           tags: rogerdipasquale/jboss-as7:${{ github.sha }},rogerdipasquale/jboss-as7:latest
